# clash-tryout

./: .gitignore  LICENSE  clash.cabal
examples/: alu.hs  bramtest.hs  fir.hs  reducer.hs  register.hs
src/: CLaSH.hs
src/CLaSH/: Builtin.hs  CoreHW.hs  Desugar.hs  Desugar.hs-boot  Driver.hs  Netlist.hs  Normalize.hs  Normalize.hs-boot  Util.hs
src/CLaSH/Desugar/: Strategy.hs  Tools.hs  Transformations.hs  Types.hs
src/CLaSH/Driver/: PrepareBinding.hs  TestbenchGen.hs  Tools.hs  Types.hs
src/CLaSH/Netlist/: Constants.hs  GenVHDL.hs  Tools.hs  Types.hs
src/CLaSH/Normalize/: Strategy.hs  Tools.hs  Transformations.hs  Traverse.hs  Types.hs
src/CLaSH/Util/: Core.hs  CoreHW.hs  GHC.hs  Pretty.hs
src/CLaSH/Util/Core/: Pretty.hs  Show.hs  Tools.hs  Transform.hs  Traverse.hs  Types.hs
src/CLaSH/Util/CoreHW/: Constants.hs  CoreToCoreHW.hs  FreeVars.hs  Syntax.hs  TermSubst.hs  Tools.hs  Transform.hs  Traverse.hs  Types.hs
src/CLaSH/Util/GHC/: LoadExtExpr.hs  LoadModules.hs
src/CLaSH/Util/Pretty/: Core.hs  CoreHW.hs
src/Data/Sized/: Index.hs  Integer.hs  Signed.hs  Unsigned.hs  Vector.hs
