Name:                clash
Version:             0.1
Synopsis:            CLaSH
-- Description:
Homepage:            http://clash.ewi.utwente.nl
License:             BSD3
License-file:        LICENSE
Author:              Christiaan Baaij
Maintainer:          christiaan.baaij@gmail.com
-- Copyright:
Category:            Hardware
Build-type:          Simple

Cabal-version:       >=1.2

Library
  Exposed-modules:     CLaSH, CLaSH.Builtin

  HS-Source-Dirs:      src

  extensions:          TemplateHaskell

  Build-depends:       base             >= 4.4.0.0 && < 4.5,
                       containers       >= 0.4.1.0 && < 0.5,
                       ghc              >= 7.2     && < 7.3,
                       fclabels         >= 1.0.4   && < 1.1,
                       kure             >= 0.3.1   && < 0.4,
                       time             >= 1.2.0.5 && < 1.3,
                       mtl              >= 2.0.1.0 && < 2.1,
                       template-haskell >= 2.6.0.0 && < 2.7,
                       ghc-paths        >= 0.1.0.8 && < 0.2,
                       th-lift          >= 0.5.4   && < 0.6,
                       tfp              >= 0.3     && < 0.4,
                       pretty           >= 1.1.0.0 && < 1.2,
                       filepath         >= 1.2.0.1 && < 1.3,
                       directory        >= 1.1.0.1 && < 1.2

  Other-modules:       CLaSH.Desugar,
                       CLaSH.Desugar.Strategy,
                       CLaSH.Desugar.Tools,
                       CLaSH.Desugar.Transformations,
                       CLaSH.Desugar.Types,
                       CLaSH.Driver,
                       CLaSH.Driver.Tools,
                       CLaSH.Driver.Types,
                       CLaSH.Netlist,
                       CLaSH.Netlist.Constants,
                       CLaSH.Netlist.GenVHDL,
                       CLaSH.Netlist.Tools,
                       CLaSH.Netlist.Types,
                       CLaSH.Normalize,
                       CLaSH.Normalize.Strategy,
                       CLaSH.Normalize.Tools,
                       CLaSH.Normalize.Transformations,
                       CLaSH.Normalize.Types,
                       CLaSH.Util,
                       CLaSH.Util.Core,
                       CLaSH.Util.Core.Show,
                       CLaSH.Util.Core.Tools,
                       CLaSH.Util.Core.Transform,
                       CLaSH.Util.Core.Traverse,
                       CLaSH.Util.Core.Types,
                       CLaSH.Util.CoreHW.CoreToCoreHW,
                       CLaSH.Util.CoreHW.FreeVars,
                       CLaSH.Util.CoreHW.Syntax,
                       CLasH.Util.CoreHW.Tools,
                       CLaSH.Util.GHC,
                       CLaSH.Util.GHC.LoadExtExpr,
                       CLaSH.Util.GHC.LoadModules,
                       CLaSH.Util.Pretty,
                       CLaSH.Util.Pretty.Core,

                       Data.Sized.Integer,
                       Data.Sized.Index,
                       Data.Sized.Signed,
                       Data.Sized.Unsigned,
                       Data.Sized.Vector

