Name:                clash
Version:             0.1
Synopsis:            CLaSH
-- Description:
Homepage:            http://clash.ewi.utwente.nl
License:             BSD3
License-file:        LICENSE
Author:              Christiaan Baaij
Maintainer:          christiaan.baaij@gmail.com
-- Copyright:
Category:            Hardware
Build-type:          Simple

Cabal-version:       >=1.2

Library
  Exposed-modules:     CLaSH,
                       CLaSH.Builtin,
                       Data.Sized.Signed,
                       Data.Sized.Unsigned,
                       Data.Sized.Vector

  HS-Source-Dirs:      src

  extensions:          TemplateHaskell
  ghc-options:         -O2

  Build-depends:       base             >= 4.3.1.0 && < 4.6,
                       containers       >= 0.4.0.0,
                       ghc              >= 7.0     && < 7.5,
                       fclabels         >= 1.0.4,
                       kure             >= 0.3.1 && < 2.0,
                       time             >= 1.2.0.3,
                       mtl              >= 2.0.1.0,
                       template-haskell >= 2.5.0.0,
                       ghc-paths        >= 0.1.0.8,
                       th-lift          >= 0.5.4,
                       tfp              >= 0.7,
                       pretty           >= 1.0.1.2,
                       filepath         >= 1.2.0.0,
                       directory        >= 1.1.0.0,
                       transformers     >= 0.2.2.0

  Other-modules:       CLaSH.CoreHW,
                       CLaSH.Desugar,
                       CLaSH.Desugar.Strategy,
                       CLaSH.Desugar.Tools,
                       CLaSH.Desugar.Transformations,
                       CLaSH.Desugar.Types,
                       CLaSH.Driver,
                       CLaSH.Driver.PrepareBinding,
                       CLaSH.Driver.TestbenchGen,
                       CLaSH.Driver.Tools,
                       CLaSH.Driver.Types,
                       CLaSH.Netlist,
                       CLaSH.Netlist.GenVHDL,
                       CLaSH.Netlist.Tools,
                       CLaSH.Netlist.Types,
                       CLaSH.Normalize,
                       CLaSH.Normalize.Strategy,
                       CLaSH.Normalize.Tools,
                       CLaSH.Normalize.Transformations,
                       CLaSH.Normalize.Types,
                       CLaSH.Util,
                       CLaSH.Util.Core,
                       CLaSH.Util.Core.Show,
                       CLaSH.Util.Core.Tools,
                       CLaSH.Util.Core.Transform,
                       CLaSH.Util.Core.Traverse,
                       CLaSH.Util.Core.Types,
                       CLaSH.Util.CoreHW
                       CLaSH.Util.CoreHW.Constants,
                       CLaSH.Util.CoreHW.CoreToCoreHW,
                       CLaSH.Util.CoreHW.FreeVars,
                       CLaSH.Util.CoreHW.Syntax,
                       CLaSH.Util.CoreHW.TermSubst,
                       CLaSH.Util.CoreHW.Tools,
                       CLaSH.Util.CoreHW.Transform,
                       CLaSH.Util.CoreHW.Traverse
                       CLaSH.Util.CoreHW.Types,
                       CLaSH.Util.GHC,
                       CLaSH.Util.GHC.LoadExtExpr,
                       CLaSH.Util.GHC.LoadModules,
                       CLaSH.Util.Pretty,
                       CLaSH.Util.Pretty.Core,
                       CLaSH.Util.Pretty.CoreHW,

                       Data.Sized.Integer
